fixed profile picture on mobile

--- a/style.css
+++ b/style.css
@@ -508,6 +508,8 @@ h4 {
   background-color: var(--bg1);
   color: var(--bg2);
   flex-direction: column;
+  justify-content: center;
+  text-align: justify;
 }
 
 .project-text {
@@ -677,9 +679,7 @@ h4 {
   }
 
   #about img {
-    max-width: 100%;
-    object-fit: contain;
-    margin: 0;
+    width: 100%;
   }
 
   .profile-description {
